tests/miniJava/neg/004395_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public this java ( ) { return 0 ; } }
